@@ -1,3 +1,4 @@
+1/7/2010 ModelViewTransform: added viewToModel(Shape) and factored out transform inversion code
 1/4/2010 added double buffering for the AWT splash screen, see #2617
 1/3/2011 #2624, display KSU credits window during sim launch sequence
 1/3/2011 deprecated SwingUtils.centerDialogInParent, use more general SwingUtils.centerInParent
